further debugging github pages background image load issue

--- a/index.html
+++ b/index.html
@@ -104,5 +104,11 @@
     </main>
     <footer></footer>
     <script type="module" src="./src/main.js"></script>
+    <script>
+      console.log(
+        "Base URL:",
+        window.location.origin + window.location.pathname
+      );
+    </script>
   </body>
 </html>
