--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Dorsa&family=Limelight&family=Martel+Sans:wght@200;300;400;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <meta
       name="description"
       content="Naïka C. Estriplet - Software Developer Portfolio"
